@@ -1,4 +1,6 @@
 release 0.2.1 (2007-08-xx)
+- Fixed bug in light weight HTTP server container that caused query parameters
+  to be decoded twice and incorrectly extracted from the URI query string.
 - JSON entity providers added to support JSONArray and JSONObject 
   entities from http://www.json.org/java/index.html
 
